--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "framer-motion": "^12.15.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -24,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "sweetalert2": "^11.17.2",
+    "tailwindcss": "^4.1.8",
     "yup": "^1.6.1"
   },
   "devDependencies": {
